# Tutor10AI

./: .gitignore  README.md  agent_output.json  docker-compose.yml  env.txt  graph_output.json  last_standings.md  main.py  pyproject.toml  start.sh  test.py  test2.py  test_prompt.md
src/: agent.py  app.py  embedding.py  graph.py  main.py  prompts.py  st.py
src/rag/: embedding.py  loader.py
src/skills/decomposeaggregate/: SKILL.md
src/skills/retrieve/: SKILL.md
src/skills/websearch/: SKILL.md
